fix: responsive layout issues

--- a/src/projects/userauth/style.css
+++ b/src/projects/userauth/style.css
@@ -92,12 +92,20 @@ footer {
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 740px) {
     .corpo {
         width: auto;
-        height: auto;
     }
     #preview {
         width: 500px;
+    }
+}
+
+@media (max-width: 530px) {
+    .corpo {
+        width: auto;
+    }
+    #preview {
+        width: 400px;
     }
 }
